Add main py file and add code for dag

--- a/dsa-airflow/dags/rg_work_test.ipynb
+++ b/dsa-airflow/dags/rg_work_test.ipynb
@@ -115,6 +115,76 @@
     "create_dataset()\n",
     "create_stocks_table()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\u001b[34m2023-02-14 10:36:12,691\u001b[0m] {\u001b[34mvariable.py:\u001b[0m272} ERROR\u001b[0m - Unable to retrieve variable from secrets backend (MetastoreBackend). Checking subsequent secrets backend.\u001b[0m\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/sqlalchemy/engine/base.py\", line 1706, in _execute_context\n",
+      "    cursor, statement, parameters, context\n",
+      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/sqlalchemy/engine/default.py\", line 716, in do_execute\n",
+      "    cursor.execute(statement, parameters)\n",
+      "sqlite3.OperationalError: no such table: variable\n",
+      "\n",
+      "The above exception was the direct cause of the following exception:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/airflow/models/variable.py\", line 265, in get_variable_from_secrets\n",
+      "    var_val = secrets_backend.get_variable(key=key)\n",
+      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/airflow/utils/session.py\", line 71, in wrapper\n",
+      "    return func(*args, session=session, **kwargs)\n",
+      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/airflow/secrets/metastore.py\", line 63, in get_variable\n",
+      "    var_value = session.query(Variable).filter(Variable.key == key).first()\n",
+      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/sqlalchemy/orm/query.py\", line 2734, in first\n",
+      "    return self.limit(1)._iter().first()\n",
+      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/sqlalchemy/orm/query.py\", line 2821, in _iter\n",
+      "    execution_options={\"_sa_orm_load_options\": self.load_options},\n",
+      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/sqlalchemy/orm/session.py\", line 1670, in execute\n",
+      "    result = conn._execute_20(statement, params or {}, execution_options)\n",
+      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/sqlalchemy/engine/base.py\", line 1520, in _execute_20\n",
+      "    return meth(self, args_10style, kwargs_10style, execution_options)\n",
+      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/sqlalchemy/sql/elements.py\", line 314, in _execute_on_connection\n",
+      "    self, multiparams, params, execution_options\n",
+      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/sqlalchemy/engine/base.py\", line 1399, in _execute_clauseelement\n",
+      "    cache_hit=cache_hit,\n",
+      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/sqlalchemy/engine/base.py\", line 1749, in _execute_context\n",
+      "    e, statement, parameters, cursor, context\n",
+      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/sqlalchemy/engine/base.py\", line 1930, in _handle_dbapi_exception\n",
+      "    sqlalchemy_exception, with_traceback=exc_info[2], from_=e\n",
+      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/sqlalchemy/util/compat.py\", line 211, in raise_\n",
+      "    raise exception\n",
+      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/sqlalchemy/engine/base.py\", line 1706, in _execute_context\n",
+      "    cursor, statement, parameters, context\n",
+      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/sqlalchemy/engine/default.py\", line 716, in do_execute\n",
+      "    cursor.execute(statement, parameters)\n",
+      "sqlalchemy.exc.OperationalError: (sqlite3.OperationalError) no such table: variable\n",
+      "[SQL: SELECT variable.val AS variable_val, variable.id AS variable_id, variable.\"key\" AS variable_key, variable.description AS variable_description, variable.is_encrypted AS variable_is_encrypted \n",
+      "FROM variable \n",
+      "WHERE variable.\"key\" = ?\n",
+      " LIMIT ? OFFSET ?]\n",
+      "[parameters: ('config_file', 1, 0)]\n",
+      "(Background on this error at: http://sqlalche.me/e/14/e3q8)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import yaml\n",
+    "from airflow.models import Variable\n",
+    "from airflow.hooks.filesystem import FSHook\n",
+    "\n",
+    "_default_config_path = './config.yml'\n",
+    "CONF_PATH = Variable.get('config_file', default_var=_default_config_path)\n",
+    "config: dict = {}\n",
+    "with open(CONF_PATH) as open_yaml:\n",
+    "    config: dict =  yaml.full_load(open_yaml)"
+   ]
   }
  ],
  "metadata": {
