load tornadoes file into dataframe.

--- a/phil_nb.ipynb
+++ b/phil_nb.ipynb
@@ -2,17 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[DEBUG][2023-02-14 12:29:55,845][2275407497:0051] : Creating bigquery client\n",
+      "[INFO ][2023-02-14 12:29:55,856][2275407497:0053] : Setup Completed\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
     "import pandas as pd\n",
     "import logging\n",
     "from google.cloud import bigquery\n",
-    "from hashlib import md5\n",
-    "from typing import List\n",
     "from google.cloud import bigquery\n",
     "from google.oauth2 import service_account\n",
     "\n",
@@ -28,37 +35,21 @@
     "# **** SETUP ****\n",
     "\n",
     "DATA_DIR = \"./data/\"\n",
-    "DEFAULT_BOSTON_CRIME_FILE = os.path.join(DATA_DIR, \"boston_crime_data.csv\")\n",
-    "DEFAULT_PORTLAND_CRIME_FILE = os.path.join(DATA_DIR, \"portland_crime_data.csv\")\n",
+    "DEFAULT_TORNADOES_FILE = os.path.join(DATA_DIR, \"tornadoes.csv\")\n",
     "PROJECT_NAME = \"team-week3\"\n",
-    "GTA_DATASET_NAME = \"global_terror_attacks\"\n",
+    "TORNADOES_DATASET_NAME = \"tornadoes\"\n",
     "\n",
     "\n",
     "\n",
     "# **** TABLE SCHEMAS ****\n",
     "\n",
     "TABLE_METADATA = {\n",
-    "    'boston_crime': {\n",
-    "        'table_name': 'boston_crime',\n",
+    "    'tornadoes': {\n",
+    "        'table_name': 'tornadoes',\n",
     "        'schema': [\n",
     "            # indexes are written if only named in the schema\n",
     "            bigquery.SchemaField('incident_number', 'string', mode='REQUIRED'),\n",
-    "            bigquery.SchemaField('offense_code', 'int64', mode='REQUIRED'),\n",
-    "            bigquery.SchemaField('offense_code_group', 'string', mode='REQUIRED'),\n",
-    "            bigquery.SchemaField('offense_description', 'string', mode='NULLABLE'),\n",
-    "            bigquery.SchemaField('district', 'string', mode='REQUIRED'),\n",
-    "            bigquery.SchemaField('reporting_area', 'int64',mode='NULLABLE'),\n",
-    "            bigquery.SchemaField('shooting', 'string',mode='NULLABLE'),\n",
-    "            bigquery.SchemaField('occurred_on_date','datetime64', mode='REQUIRED'),\n",
-    "            bigquery.SchemaField('year', 'int64', mode='REQUIRED'),\n",
-    "            bigquery.SchemaField('month', 'int64', mode='REQUIRED'),\n",
-    "            bigquery.SchemaField('day_of_week', 'string', mode='REQUIRED'),\n",
-    "            bigquery.SchemaField('hour', 'int64', mode='REQUIRED'),\n",
-    "            bigquery.SchemaField('ucr_part','string', mode='NULLABLE'),\n",
-    "            bigquery.SchemaField('street', 'string', mode='REQUIRED'),\n",
-    "            bigquery.SchemaField('lat','float64', mode='REQUIRED'),\n",
-    "            bigquery.SchemaField('long', 'float64', mode='REQUIRED'),\n",
-    "            bigquery.SchemaField('location', 'object', mode='REQUIRED')\n",
+    "            \n",
     "        ]\n",
     "    }\n",
     "}\n",
@@ -78,6 +69,443 @@
     "\n",
     "logger.info(f\"Setup Completed\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO ][2023-02-14 14:01:55,293][3571555385:0015] : loaded 68868 rows from ./data/tornadoes.csv\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>om</th>\n",
+       "      <th>yr</th>\n",
+       "      <th>mo</th>\n",
+       "      <th>dy</th>\n",
+       "      <th>date</th>\n",
+       "      <th>time</th>\n",
+       "      <th>tz</th>\n",
+       "      <th>st</th>\n",
+       "      <th>stf</th>\n",
+       "      <th>stn</th>\n",
+       "      <th>...</th>\n",
+       "      <th>len</th>\n",
+       "      <th>wid</th>\n",
+       "      <th>ns</th>\n",
+       "      <th>sn</th>\n",
+       "      <th>sg</th>\n",
+       "      <th>f1</th>\n",
+       "      <th>f2</th>\n",
+       "      <th>f3</th>\n",
+       "      <th>f4</th>\n",
+       "      <th>fc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>192</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1950-10-01</td>\n",
+       "      <td>21:00:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>OK</td>\n",
+       "      <td>40</td>\n",
+       "      <td>23</td>\n",
+       "      <td>...</td>\n",
+       "      <td>15.8</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>193</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1950-10-09</td>\n",
+       "      <td>02:15:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NC</td>\n",
+       "      <td>37</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>880</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>47</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>195</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>11</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1950-11-20</td>\n",
+       "      <td>02:20:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>KY</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>177</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>196</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>11</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1950-11-20</td>\n",
+       "      <td>04:00:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>KY</td>\n",
+       "      <td>21</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>209</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>197</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>11</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1950-11-20</td>\n",
+       "      <td>07:30:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>MS</td>\n",
+       "      <td>28</td>\n",
+       "      <td>14</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>37</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>101</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>194</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>11</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1950-11-04</td>\n",
+       "      <td>17:00:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>42</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>15.9</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>71</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>198</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1950-12-02</td>\n",
+       "      <td>15:00:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>17</td>\n",
+       "      <td>7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>18.8</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>119</td>\n",
+       "      <td>117</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>199</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1950-12-02</td>\n",
+       "      <td>16:00:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>17</td>\n",
+       "      <td>8</td>\n",
+       "      <td>...</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>200</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>119</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>200</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1950-12-02</td>\n",
+       "      <td>16:25:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>AR</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>65</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>201</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1950-12-02</td>\n",
+       "      <td>17:30:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>17</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9.6</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>157</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10 rows × 29 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    om    yr  mo  dy        date      time  tz  st  stf  stn  ...   len  wid  \\\n",
+       "0  192  1950  10   1  1950-10-01  21:00:00   3  OK   40   23  ...  15.8   10   \n",
+       "1  193  1950  10   9  1950-10-09  02:15:00   3  NC   37    9  ...   2.0  880   \n",
+       "2  195  1950  11  20  1950-11-20  02:20:00   3  KY   21    1  ...   0.1   10   \n",
+       "3  196  1950  11  20  1950-11-20  04:00:00   3  KY   21    2  ...   0.1   10   \n",
+       "4  197  1950  11  20  1950-11-20  07:30:00   3  MS   28   14  ...   2.0   37   \n",
+       "5  194  1950  11   4  1950-11-04  17:00:00   3  PA   42    5  ...  15.9  100   \n",
+       "6  198  1950  12   2  1950-12-02  15:00:00   3  IL   17    7  ...  18.8   50   \n",
+       "7  199  1950  12   2  1950-12-02  16:00:00   3  IL   17    8  ...  18.0  200   \n",
+       "8  200  1950  12   2  1950-12-02  16:25:00   3  AR    5   12  ...   7.8   10   \n",
+       "9  201  1950  12   2  1950-12-02  17:30:00   3  IL   17    9  ...   9.6   50   \n",
+       "\n",
+       "   ns  sn  sg   f1   f2  f3  f4  fc  \n",
+       "0   1   1   1   25    0   0   0   0  \n",
+       "1   1   1   1   47    0   0   0   0  \n",
+       "2   1   1   1  177    0   0   0   0  \n",
+       "3   1   1   1  209    0   0   0   0  \n",
+       "4   1   1   1  101    0   0   0   0  \n",
+       "5   1   1   1   71   11   0   0   0  \n",
+       "6   1   1   1  119  117   0   0   0  \n",
+       "7   1   1   1  119    5   0   0   0  \n",
+       "8   1   1   1   65    0   0   0   0  \n",
+       "9   1   1   1  157    0   0   0   0  \n",
+       "\n",
+       "[10 rows x 29 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[DEBUG][2023-02-14 14:01:55,541][3571555385:0057] : om         int64\n",
+      "yr         int64\n",
+      "mo         int64\n",
+      "dy         int64\n",
+      "date      object\n",
+      "time      object\n",
+      "tz         int64\n",
+      "st        object\n",
+      "stf        int64\n",
+      "stn        int64\n",
+      "mag        int64\n",
+      "inj        int64\n",
+      "fat        int64\n",
+      "loss     float64\n",
+      "closs    float64\n",
+      "slat     float64\n",
+      "slon     float64\n",
+      "elat     float64\n",
+      "elon     float64\n",
+      "len      float64\n",
+      "wid        int64\n",
+      "ns         int64\n",
+      "sn         int64\n",
+      "sg         int64\n",
+      "f1         int64\n",
+      "f2         int64\n",
+      "f3         int64\n",
+      "f4         int64\n",
+      "fc         int64\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# tornadoes data file name\n",
+    "filename = DEFAULT_TORNADOES_FILE\n",
+    "\n",
+    "# check if the file exists\n",
+    "assert os.path.exists(filename), f\"Data file does not exists: '{filename}'\"\n",
+    "# check if the file contains any data. Header row alone is 78 bytes. size > 78\n",
+    "assert os.path.getsize(filename) > 78, f\"Data file size incorrect; does not seem to contain data: '{filename}'\"\n",
+    "\n",
+    "# load into dataframe\n",
+    "df = pd.read_csv(\n",
+    "    filename, \n",
+    "    header=0, \n",
+    "    on_bad_lines='warn'\n",
+    "    )\n",
+    "logger.info(f\"loaded {len(df.index)} rows from {filename}\")\n",
+    "\n",
+    "\n",
+    "# check schema: contains all expected columns?\n",
+    "expected_columns = [\n",
+    "    'om',\n",
+    "    'yr',\n",
+    "    'mo',\n",
+    "    'dy',\n",
+    "    'date',\n",
+    "    'time',\n",
+    "    'tz',\n",
+    "    'st',\n",
+    "    'stf',\n",
+    "    'stn',\n",
+    "    'mag',\n",
+    "    'inj',\n",
+    "    'fat',\n",
+    "    'loss',\n",
+    "    'closs',\n",
+    "    'slat',\n",
+    "    'slon',\n",
+    "    'elat',\n",
+    "    'elon',\n",
+    "    'len',\n",
+    "    'wid',\n",
+    "    'ns',\n",
+    "    'sn',\n",
+    "    'f1',\n",
+    "    'f2',\n",
+    "    'f3',\n",
+    "    'f4',\n",
+    "    'fc'\n",
+    "]\n",
+    "for col in expected_columns:\n",
+    "    assert col in list(df.columns), f\"Data file missing required column: {col}\"\n",
+    "\n",
+    "# assign & remember tornadoes dataframe\n",
+    "tornadoes_df = df\n",
+    "display(tornadoes_df.head(10))\n",
+    "\n",
+    "# log data column data types\n",
+    "logger.debug(df.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -87,7 +515,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.7.16"
   },
   "orig_nbformat": 4,
