added logger statements.

--- a/phil_nb.ipynb
+++ b/phil_nb.ipynb
@@ -72,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO ][2023-02-14 15:51:06,731][1823291173:0015] : loaded 68868 rows from ./data/tornadoes.csv\n"
+      "[INFO ][2023-02-14 15:59:21,331][304960853:0015] : loaded 68868 rows from ./data/tornadoes.csv\n"
      ]
     },
     {
@@ -402,42 +402,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[DEBUG][2023-02-14 15:51:06,753][1823291173:0057] : om         int64\n",
-      "yr         int64\n",
-      "mo         int64\n",
-      "dy         int64\n",
-      "date      object\n",
-      "time      object\n",
-      "tz         int64\n",
-      "st        object\n",
-      "stf        int64\n",
-      "stn        int64\n",
-      "mag        int64\n",
-      "inj        int64\n",
-      "fat        int64\n",
-      "loss     float64\n",
-      "closs    float64\n",
-      "slat     float64\n",
-      "slon     float64\n",
-      "elat     float64\n",
-      "elon     float64\n",
-      "len      float64\n",
-      "wid        int64\n",
-      "ns         int64\n",
-      "sn         int64\n",
-      "sg         int64\n",
-      "f1         int64\n",
-      "f2         int64\n",
-      "f3         int64\n",
-      "f4         int64\n",
-      "fc         int64\n",
-      "dtype: object\n"
-     ]
     }
    ],
    "source": [
@@ -496,15 +460,21 @@
     "# tornadoes_df = df\n",
     "display(df.tail(10))\n",
     "\n",
-    "# log data column data types\n",
-    "logger.debug(df.dtypes)"
+    "# log data column data types"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO ][2023-02-14 15:59:24,134][2866547761:0017] : Dropped columns.\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -678,7 +648,7 @@
        "4    0.0  32.42  -89.13   0.00    0.0   2.0   37  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,14 +670,23 @@
     "\n",
     "df = df.drop(columns=drop_cols)\n",
     "\n",
+    "logger.info('Dropped columns.')\n",
+    "\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO ][2023-02-14 15:59:41,104][1905297358:0024] : Renamed columns.\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -888,7 +867,7 @@
        "4        -89.13     0.00      0.0     2.0     37  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,6 +895,8 @@
     "}\n",
     "\n",
     "df = df.rename(columns=renamed)\n",
+    "\n",
+    "logger.info('Renamed columns.')\n",
     "\n",
     "df.head()"
    ]
